# rust-godot-persistant-online-game

./: .gitignore  README.md  server.code-workspace
client-godot/: Main.tscn  export_presets.cfg  game.gd  game.gd.uid  global.gd  global.gd.uid  icon.svg.import  interface.gd  interface.gd.uid  network.gd  network.gd.uid  player.gd  (+9 more)
server/: Cargo.toml
server/client_gdext/: Cargo.toml
server/client_gdext/src/: lib.rs  network_node.rs  player_object.rs
server/gd_ext/: Cargo.toml
server/gd_ext/src/: client_network.rs  lib.rs  network_node.rs  rust_network.rs
server/server/: Cargo.toml
server/server/src/: main.rs
server/server/src/game/: command.rs  engine.rs  game.rs  game_manager.rs  mod.rs  physics.rs  player.rs
server/server/src/network/: auth.rs  client.rs  manager.rs  mod.rs  network.rs  process_packet.rs  session.rs
server/server/src/storage/: mem_db.rs  mod.rs  player.rs  session.rs
server/server_gdext/: Cargo.toml
server/server_gdext/src/: lib.rs  network_manager.rs  network_node.rs
server/shared/: Cargo.toml
server/shared/src/: lib.rs
server/shared/src/game/: action.rs  game_state.rs  mod.rs  player.rs  vector.rs
server/shared/src/network/: command.rs  mod.rs  packet.rs  packet_tcp.rs  packet_udp.rs  packet_uds_dg.rs  packet_uds_stream.rs
server/src/: game.rs  main.rs  network.rs  test_main.rs
server/src/game/: game.rs  mod.rs  physics.rs  player.rs  vector.rs
server/src/network/: mod.rs  network.rs  process_packet.rs
server/src/storage/: mem_db.rs  mod.rs
server/test_client/: Cargo.toml
server/test_client/src/: main.rs
(+30 files in other folders)
