[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.30.0", features = ["r2d2"] }
rapier3d = { version = "0.25.0", features = ["simd-stable"] }
r2d2 = "0.8.10"
